# ChangeLog for catalyst
# Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py:
  Replace all instances of print with catalyst.output.msg() in
  catalyst.target.generic_stage

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic.py,
  modules/catalyst/target/generic_stage.py:
  Move set_autoresume_path() from catalyst.target.generic_stage to
  catalyst.target.generic

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
  modules/catalyst/target/livecd_stage1.py,
  modules/catalyst/target/livecd_stage2.py,
  modules/catalyst/target/netboot.py:
  Make use of set_autoresume() in target modules

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic.py,
  modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
  modules/catalyst/target/livecd_stage1.py,
  modules/catalyst/target/livecd_stage2.py,
  modules/catalyst/target/netboot.py:
  Add check_autoresume() and set_autoresume() helpers to
  catalyst.target.generic and make use of them

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
  modules/catalyst/target/livecd_stage1.py,
  modules/catalyst/target/livecd_stage2.py,
  modules/catalyst/target/netboot.py, modules/catalyst/target/snapshot.py,
  modules/catalyst/target/tinderbox.py:
  Import only cmd() from catalyst.spawn

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/target/generic_stage.py,
  modules/catalyst/target/livecd_stage2.py,
  modules/catalyst/target/stage2.py:
  Remove redundant imports

  12 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/arch/alpha.py, modules/catalyst/arch/arm.py,